# cxx_json

./: .clang-format  .clang-tidy  CMakeLists.txt  Doxyfile  LICENSE  README.md  gcovr.cfg  gcovr.ci.cfg  json.hpp  launch.json  main  main.cpp  main_old.cpp  parser copy.hpp  parser.hpp  parsing.hpp
.github/workflows/: build.yml  check.yml  ci.yml  coverage.yml  docs.yml  main.yml
.github/workflows/hash/: action.yml
.github/workflows/setup-env/: action.yml
cmake/: macros.cmake
docs/: CMakeLists.txt
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  main.c  main.cpp  readme.c  readme.cpp
include/langnes/json/: errors.hpp  json.hpp
include/langnes/json/detail/: dict.hpp  json.hpp  memory.hpp  optional.hpp  parsing.hpp  parsing_rules.hpp  stream.hpp  type_traits.hpp  utf8.hpp  value.hpp  value_fwd.hpp  value_impl.hpp  yaml.hpp
include/langnes/serialization/: parsing.hpp
include/langnes/serialization/json/: json.hpp
include/langnes_json/: errors.h  json.h
include/langnes_json/detail/: dict.hpp  expected.hpp  parsing.hpp  utf8.hpp  value.hpp  value_impl.hpp  yaml.hpp
lib/: CMakeLists.txt  langnes_json-config.cmake.in
lib/c/: CMakeLists.txt  langnes_json_c-config.cmake.in
lib/c/src/: errors.cpp  exports.cpp
lib/cxx/: CMakeLists.txt  langnes_json_cxx-config.cmake.in
lib/cxx/include/langnes_json/cxx/: errors.hpp
lib/cxx/include/langnes_json/cxx/detail/: dict.hpp  optional.hpp  parsing.hpp  stream.hpp  value_impl.hpp
lib/include/langnes_json/: errors.h  errors.hpp  json.h  json.hpp  value.hpp
lib/include/langnes_json/detail/: dict.hpp  errors.h  errors.hpp  expected.hpp  indent.hpp  json.hpp  macros.h  macros.hpp  optional.hpp  parsing.hpp  parsing_rules.hpp  stream.hpp  token_rules.hpp  type_traits.hpp  types.h  utf8.hpp  value.hpp  value_fwd.hpp  value_impl.hpp
lib/src/: errors.cpp  exports.cpp
packaging/: CMakeLists.txt
private/: CMakeLists.txt
scripts/: check_format.sh  check_tidy.sh  lint.sh  reformat.sh
src/: exports.cpp
test_driver/: CMakeLists.txt
test_driver/cmake/: discovery.cmake  generate_includes.cmake
test_driver/include/langnes_json/: test_driver.hpp  testing.hpp
test_driver/src/: test_driver.cpp  testing.cpp
tests/: CMakeLists.txt
tests/c_api/: CMakeLists.txt  tests.cpp
tests/cxx_api/: CMakeLists.txt  tests.cpp
tests/examples/: CMakeLists.txt
tests/functional/: CMakeLists.txt  c_api_tests.cpp  cxx_api_tests.cpp
tests/unit/: CMakeLists.txt  json_tests.cpp  utf8_tests.cpp
