add_executable(langnes_json_example_c main.c)
add_executable(langnes_json_example_cxx main.cpp)
add_executable(langnes_json_readme_example_c readme.c)
add_executable(langnes_json_readme_example_cxx readme.cpp)
target_link_libraries(langnes_json_example_c PRIVATE langnes::json::shared langnes_json_private)
target_link_libraries(langnes_json_example_cxx PRIVATE langnes::json langnes_json_private)
target_link_libraries(langnes_json_readme_example_c PRIVATE langnes::json::shared langnes_json_private)
target_link_libraries(langnes_json_readme_example_cxx PRIVATE langnes::json langnes_json_private)
